<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">


    <TextView
    android:id="@+id/item_heading"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/items_available"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:padding="10dp"
        android:textStyle="bold"
        android:textAlignment="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_heading">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical|center_horizontal">

            <Button
                android:id="@+id/apple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:padding="20dp"
                android:layout_margin="10dp"
                android:text="@string/item1"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:onClick="addtocart"/>


            <Button
                android:id="@+id/strawberry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:padding="20dp"
                android:layout_margin="10dp"
                android:text="@string/item2"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:onClick="addtocart" />


            <Button
                android:id="@+id/mango"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:padding="20dp"
                android:layout_margin="10dp"
                android:text="@string/item3"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:onClick="addtocart" />


            <Button
                android:id="@+id/orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:padding="20dp"
                android:layout_margin="10dp"
                android:text="@string/item4"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:onClick="addtocart" />

            <Button
                android:id="@+id/cheese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:padding="20dp"
                android:layout_margin="10dp"
                android:text="@string/item5"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:onClick="addtocart" />

            <Button
                android:id="@+id/roll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:padding="20dp"
                android:layout_margin="10dp"
                android:text="@string/item6"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:onClick="addtocart"/>

            <Button
                android:id="@+id/pizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:padding="20dp"
                android:layout_margin="10dp"
                android:text="@string/item7"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:onClick="addtocart"/>


            <Button
                android:id="@+id/juice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:padding="20dp"
                android:layout_margin="10dp"
                android:text="@string/item8"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:onClick="addtocart"/>


            <Button
                android:id="@+id/cornflakes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:padding="20dp"
                android:layout_margin="10dp"
                android:text="@string/item9"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:onClick="addtocart"/>

            <Button
                android:id="@+id/honey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:padding="20dp"
                android:layout_margin="10dp"
                android:text="@string/item10"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:onClick="addtocart"/>





        </LinearLayout>


    </ScrollView>

</RelativeLayout>